--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 									</a></h2>
 									<p>In this project we are clean housing data in SQL server.</p>
 								</header>
-								<a href="https://github.com/ajaybhupathiraju/GANS/blob/main/CGAN.ipynb" class="image main"><img src="https://public.tableau.com/app/profile/ajay.kumar8513/viz/total_sales_16869118595570/Sheet1" alt="" /></a>
+								<a href="https://github.com/ajaybhupathiraju/GANS/blob/main/CGAN.ipynb" class="image main"><img src="images/data-cleaning1.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/ajaybhupathiraju/GANS/blob/main/CGAN.ipynb" class="button large">View Project</a></li>
 								</ul>
