--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="#">Data Exploration in SQL<br />
+										<h2><a href="#">Predict Heart Disease<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/ajaybhupathiraju/RNN/blob/main/ARIMA.ipynb" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="https://github.com/ajaybhupathiraju/Heart-Disease-Prediction/blob/main/README.md" class="image fit"><img src="https://victoria.mediaplanet.com/app/uploads/sites/103/2022/03/MainImage_A1-9-888x500.jpg" alt="" /></a>
 									<p>Data Exploration in Covid 19 dataset.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/ajaybhupathiraju/RNN/blob/main/ARIMA.ipynb" class="button">View Project</a></li>
